# RealNote

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-TW.md  LICENSE  README.md  README.zh-TW.md  electron.vite.config.ts  install.sh  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  start.sh  tsconfig.node.json  tsconfig.web.json
.github/workflows/: secret-scan.yml
backend/: pyproject.toml  test_itn.py
backend/meeting_minutes_backend/: __main__.py  app.py  asr.py  correction_worker.py  faster_asr.py  glossary_miner.py  ipc.py  itn.py  loop_cleaner.py  settings.py  smart_autofix.py  stream.py  stream_service.py  summarizer.py  transcript.py
data/: settings.example.json
docs/: development-status.md
resources/: icon.icns
src/main/: backend.ts  index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.vue  env.d.ts  styles.css
src/renderer/src/components/: SettingsDialog.vue
src/renderer/src/composables/: useBackend.ts
