[project]
name = "meeting-minutes-backend"
version = "0.1.0"
description = "Local backend for the Meeting Minutes ASR desktop app."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sounddevice",
    "soundfile",
    "torch",
    "torchaudio",
    "transformers",
    "accelerate",
    "datasets[audio]",
    "numpy",
    "python-dotenv",
    "openai",
    "faster-whisper>=1.2.1",
    "whisperlivekit>=0.2.19",
    "opencc-python-reimplemented>=0.1.7",
    "mlx-whisper>=0.4.3",
    "silero-vad>=5.1",
    "llama-cpp-python>=0.3.0",     # LLM 即時校正 — 內嵌 llama.cpp，預設 Metal 加速
    "huggingface-hub",              # 下載 GGUF 模型到本機快取（與 Whisper 共用快取）
    "httpx",                        # 通用 HTTP（多處已用，明確列入）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["meeting_minutes_backend"]
